--- a/streams-react/src/components/HomeContainer/HomeContainer.module.css
+++ b/streams-react/src/components/HomeContainer/HomeContainer.module.css
@@ -24,6 +24,14 @@
   box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
   animation: fadeUp 0.55s ease-out;
 }
+/***** 
+MEDIA QUERIES 
+******/
+@media(max-width: 400px) {
+  .forms {
+    min-width: auto;
+  }
+}
 /* Cool red color background-color: #DA3E52;*/
 @keyframes fadeUp {
   0% {
